--- a/style.css
+++ b/style.css
@@ -37,9 +37,54 @@ body{
     font-family: "Playfair Display", serif;
     background-color: var(--BG-Color);
     color: var(--Body-Text-Color);
+    font-size: 1.25rem;
 }
 
 .heading{
     color: var(--Heading-Color);
     text-align: center;
+    font-size: 5rem;
+}
+
+nav{
+    display: flex;
+    position: sticky;
+    top: 0;
+    z-index: 100000;
+    height: 100px;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+    margin: 0px auto;
+    border-radius: 50px;
+    padding: 20px;
+    background: rgba(124, 124, 124, 0.33);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.3px);
+    -webkit-backdrop-filter: blur(6.3px);
+    border: 1px solid rgba(124, 124, 124, 0.3);
+}
+
+nav ul{
+    display: flex;
+    align-items: center;
+    gap: 5rem;
+    list-style: none;
+}
+
+nav  ul  a{
+    text-decoration: none;
+    color: white;
+    transition: all 0.5s;
+}
+
+nav  ul  a:hover{
+    text-decoration: underline;
+    color: var(--Heading-Color);
+}
+
+.Logo{
+    color: var(--Heading-Color);
+    font-size: 2.5rem;
 }
