--- a/style.css
+++ b/style.css
@@ -88,3 +88,35 @@ nav  ul  a:hover{
     color: var(--Heading-Color);
     font-size: 2.5rem;
 }
+
+.Hero-Section{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    margin-top: -100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1.75rem;
+    background-image: url(images/Hero-img.jpg);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    text-align: center;
+    padding: 50px;
+    z-index: 2;
+}
+
+.Hero-Section::after{
+    content: "";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    left: 0;
+    z-index: -1;
+    background-color: #0000002c;
+}
