--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --BG-Color: #EEE5E9;
     --Heading-Color: #CF5C36;
     --Body-Text-Color: #000000;
-    --Section-BG-Color: #7C7C7C;
+    --Section-BG-Color: #2E2E2E;
     --BTN-BG-Color: #EFC88B;
 }
 
@@ -119,4 +119,56 @@ nav  ul  a:hover{
     left: 0;
     z-index: -1;
     background-color: #0000002c;
+}
+
+.Services-Card{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    height: auto;
+    width: 80vw;
+    margin: 10px auto;
+    padding: 10px;
+    background-color: var(--Section-BG-Color);
+    border-radius: 25px;
+}
+
+h2.heading{
+    font-size: 4rem;
+}
+
+.Card{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 25vw;
+    justify-content: end;
+    align-items: center;
+    gap: 2rem;
+    background-color: whitesmoke;
+    width: 25vw;
+    height: 75vh;
+    padding: 10px;
+    border-radius: 25px;
+}
+
+.image{
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    /* border: 1px solid black; */
+}
+
+.image img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 25px;
+}
+
+.Card button{
+    width: 150px;
+    height: 100px;
 }
